<resources>
    <string name="app_name">WCart Vendor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">582346745849309</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_login">Sign In</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_signup2_brand">Brand and Company Details</string>
    <string name="txt_signup2_bank_dtls">Bank Details</string>
    <string name="hint_email_id">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_brandname">Brand Name</string>
    <string name="hint_brandlogo">Brand Logo (optional)</string>
    <string name="hint_brandabout">About Brand</string>
    <string name="hint_bussiness_type">Type of Business(Personal or Registered)</string>
    <string name="hint_cmpny_regno">Company Registration Number(optional)</string>
    <string name="hint_web_add">Website Address</string>
    <string name="hint_vat_num">VAT Number</string>
    <string name="hint_gst">GST Number (If country is India)</string>
    <string name="hint_bank_dtls">Bank Details</string>
    <string name="hint_acc_holder">Name of the Account Holder</string>
    <string name="hint_acc_num">Bank Account Number </string>
    <string name="hint_swift_code">Swift Code (optional)</string>
    <string name="hint_bnk_address">Bank Name , Bank Branch , Bank Country</string>
    <string name="hint_lname">Last Name</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_fit_street">Wcart</string>
    <string name="txt_title_tutorial_first">Welcome to E-Commerce</string>
    <string name="err_email_empty">Please enter email address.</string>
    <string name="err_password_empty">Please enter password.</string>
    <string name="err_cpassword_empty">Please enter confirm password.</string>
    <string name="err_state_empty">Please enter your state.</string>
    <string name="err_city_empty">Please enter your city.</string>
    <string name="err_country_empty">Please enter your country.</string>
    <string name="err_network_connection">Please check your internet connection.</string>
    <string name="txt_blank"> </string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel">CANCEL</string>
    <string name="txt_female">Female</string>
    <string name="txt_male">Male</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="create_account">Create Account?</string>
    <string name="continue_with_other">__________ or continue with __________</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_cpassword">Confirm Password</string>
    <string name="txt_hint_email_id">Email</string>
    <string name="txt_hint_dob">DOB</string>
    <string name="txt_hint_city">City</string>
    <string name="txt_hint_statw">State</string>
    <string name="txt_hint_country">Country</string>
    <string name="txt_hint_mobile_no">Mobile Number.</string>
    <string name="txt_hint_name">User Name</string>
    <string name="txt_starting_text">LET\'S START EXPLORING</string>
    <string name="rb_text_receive_updates">Yes, I\'d like to receive email updates</string>
    <string name="txt_middel_view_text">OR</string>
    <string name="txt_login_with_fb">Login with Facebook</string>
    <string name="txt_login_mail">Login with Email</string>
    <string name="txt_skip">SKIP</string>
    <string name="err_email_invalid">Please enter valid email address</string>
    <string name="dialog_please_wait">Please wait&#8230;</string>
    <string name="err_name_empty">Please enter name</string>
    <string name="err_add1">Please enter address line1</string>
    <string name="err_add2">Please enter address line2</string>
    <string name="err_lname_empty">Please enter your last name</string>
    <string name="err_mobile_empty">Please enter mobile no.</string>
    <string name="err_password_length">Password must be %1$d-%2$d characters long</string>
    <string name="err_old_password_length">Old password must be %1$d-%2$d characters long</string>
    <string name="err_new_password_length">New password must be %1$d-%2$d characters long</string>
    <string name="err_gender_empty">Please select gender</string>
    <string name="err_dont_match">Password both are different</string>
    <string name="txt_forgot_pwd_title">Forgot Your Password?</string>
    <string name="hint_forgot_pwd">Enter your email id</string>
    <string name="txt_send">SEND</string>
    <string name="txt_forgot_pwd_msg">Please enter your email id below and we\'ll send you a link to reset your password</string>
    <string name="txt_change_password">Change Password</string>
    <string name="hint_old_pwd">Enter old password</string>
    <string name="hint_new_pwd">Enter new password</string>
    <string name="txt_done">Done</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_name">Name</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_mobile_no">Mobile Number</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="txt_email_id">Email Id</string>
    <string name="txt_location">Location</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="err_mobile_invalid">Mobile no. should be 20 digits long</string>
    <string name="alert_login">Please login to access this section.</string>
    <string name="txt_toolbar_home">HOME</string>
    <string name="txt_my_account">My Account</string>
    <string name="txt_my_orders">My Orders</string>
    <string name="already_user">Already have an account?</string>
    <string name="txt_my_addresses">My Addresses</string>
    <string name="txt_my_addressesline1">Addresses Line 1</string>
    <string name="txt_my_addressesline2">Addresses Line 2</string>
    <string name="txt_logout">Logout</string>
    <string name="alert_verify_email">Please verify your email</string>
    <string name="alert_logout">Are you sure you want to logout?</string>
    <string name="alert_exit">Are you sure you want to exit Wcart?</string>
    <string name="exit">Really exit?</string>
    <string name="txt_no_data">No Data Found</string>
    <string name="txt_no_product">No Product Available</string>
    <string name="txt_save">Save</string>
    <string name="err_old_pwd_empty">Please enter old password</string>
    <string name="err_new_pwd_empty">Please enter new password</string>
    <string name="hint_search">Search</string>
    <string name="txt_arc_menu_share_activities">Share Activities</string>
    <string name="txt_arc_menu_invite_friends">Invite Friends</string>
    <string name="err_fname_empty">Please enter your first name</string>
    <string name="sales">Sales</string>
    <string name="para_one">Contrary to popular belief,loream ipsium is not simply random text. it has rootin the pieces of classical latin literature from 45 BC,making it over 2000years old.</string>
    <string name="store_staticstics">Store Staticstics</string>
    <string name="sellers">Sellers</string>
    <string name="seller_count">14022</string>
    <string name="seller_content">seller are currently activated
        on your market place Store</string>
    <string name="Products">Products</string>
    <string name="product_count">125K</string>
    <string name="product_content">product are currently Activated on your Market Store</string>
    <string name="view_details">view details</string>
    <string name="oreder_number">oreder number</string>
    <string name="order_recent_para">Here you check all Recent Orders of your Market Store</string>
</resources>