<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="@dimen/d_width_et_weight"
            android:layout_marginTop="@dimen/d_mar_normal_10dp"
            android:src="@drawable/wcart_logo"/>

        <androidx.cardview.widget.CardView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            android:paddingBottom="@dimen/dp20"
            android:elevation="10dp"
            app:cardUseCompatPadding="true"
            android:clipToPadding="false"
            android:clipChildren="false"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/dp20">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:text="@string/txt_signup2_brand"
                        android:textColor="@color/c_blue_text"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="@dimen/s_tv_sign_up_title"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_brandname"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_brandabout"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_bussiness_type"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_cmpny_regno"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_web_add"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_vat_num"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_gst"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:text="@string/txt_signup2_bank_dtls"
                        android:textColor="@color/c_blue_text"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/d_mar_normal_10dp"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/s_tv_sign_up_title"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_acc_holder"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_acc_num"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_bnk_address"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_swift_code"
                        android:singleLine="true"
                        style="@style/edittext_login_sign_up"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/btn_bg"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/dp10"
                        android:padding="@dimen/d_pad_btn_login_sign_up"
                        android:textAlignment="center"
                        android:textColor="@color/c_white"
                        android:text="@string/txt_submit"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"/>

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>