<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_wcart"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/d_mar_normal_10dp"
                android:src="@drawable/wcart_logo" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/dp5"
                android:drawableLeft="@drawable/arrow_back"
                android:drawablePadding="@dimen/dp5"
                android:gravity="center"
                android:paddingTop="@dimen/dp20"
                android:paddingRight="@dimen/dp20"
                android:text="Back"
                android:textColor="@color/darker_gray_tab_indicator" />
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:elevation="10dp"
            android:paddingBottom="@dimen/dp20"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarSize="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp20"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:text="@string/txt_signup"
                        android:textAllCaps="true"
                        android:textColor="@color/c_blue_text"
                        android:textSize="@dimen/s_tv_sign_up_title"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_first_name"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_fname"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_last_name"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_lname"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_sign_up_email"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_hint_email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_hint_cpassword"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/relativeLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_country_code"
                            style="@style/edittext_login_sign_up"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginRight="@dimen/dp5"
                            android:hint="+91"
                            android:maxWidth="@dimen/dp5"
                            android:minWidth="@dimen/dp5"
                            android:singleLine="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/et_mobile_no"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_mobile_no"
                            style="@style/edittext_login_sign_up"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_hint_mobile_no"
                            android:inputType="number"
                            android:maxWidth="@dimen/dp10"
                            android:singleLine="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tv_country_code"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_address_one"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_my_addressesline1"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_address_two"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_my_addressesline2"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_city"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_hint_city"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_state"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_hint_statw"
                        android:singleLine="true" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_country"
                        style="@style/edittext_login_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/txt_hint_country"
                        android:singleLine="true" />

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="@dimen/d_mar_extra_large_20dp"
                        android:background="@drawable/btn_bg"
                        android:gravity="center"
                        android:padding="@dimen/d_pad_btn_login_sign_up"
                        android:text="@string/txt_signup"
                        android:textAlignment="center"
                        android:textColor="@color/c_white" />

                    <TextView
                        android:id="@+id/tv_already_user"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_40"
                        android:layout_margin="@dimen/dp20"
                        android:layout_marginBottom="@dimen/d_mar_extra_large_20dp"
                        android:gravity="center"
                        android:text="@string/already_user" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>